tests/baselines/reference/stringLiteralsWithSwitchStatements04.errors.txt
tests/cases/conformance/types/literal/stringLiteralsWithSwitchStatements04.ts(11,10): error TS2678: Type '"baz"' is not comparable to type '"foo" | "bar"'.


==== tests/cases/conformance/types/literal/stringLiteralsWithSwitchStatements04.ts (1 errors) ====
    let x: "foo";
    let y: "foo" | "bar"; 
    
    declare function randBool(): boolean;
    
    switch (y) {
        case "foo", x:
            break;
        case x, "foo":
            break;
        case x, "baz":
             ~~~~~~~~
!!! error TS2678: Type '"baz"' is not comparable to type '"foo" | "bar"'.
            break;
        case "baz", x:
            break;
        case "baz" && "bar":
            break;
        case "baz" && ("foo" || "bar"):
            break;
        case "bar" && ("baz" || "bar"):
            break;
    }
    